# mephi_labs

./: .gitignore  CMakeLists.txt
Term 2. Algorithm and Data Structures/lab1/: in.c  in.h  lab1  main.c  work.c
Term 2. Algorithm and Data Structures/lab2/: lab2l  libra.c  libra.h  list.c
Term 2. Algorithm and Data Structures/lab3/: dtable.h  ftable.c  ftable.h  item.h  ks1.c  ks1.h  ks2.c  ks2.h  lab3  main.c  table.h
Term 2. Algorithm and Data Structures/lab4/: dtree.c  dtree.h  graph.dot  main.c  timing.c  timing.h  tree.c  tree.h  useful.c
Term 2. Algorithm and Data Structures/lab4b/: Makefile  dtree.c  dtree.h  lab4b  main.c  test.txt  timing.h  tree.c  tree.h  useful.h
Term 2. Algorithm and Data Structures/lab5/: dgraph.c  graph.c  graph.h  ind.h
Term 3. Object-Oriented Programming/lab2/: apptest.cpp  main.cpp  test.cpp
Term 3. Object-Oriented Programming/lab2/ButaLib/: buta.cpp  buta.h
Term 3. Object-Oriented Programming/lab3/: app.cpp  app3A.cpp  app3B.cpp  app3V.cpp  tests.cpp
Term 3. Object-Oriented Programming/lab3/polynomLib/: Polynom3B.cpp  Polynom3B.h  Polynom3V.cpp  Polynom3V.h  polynom.h  polynom3A.cpp  polynom3A.h
Term 3. Object-Oriented Programming/lab4/: Diagram.drawio  app.cpp  test.cpp
Term 3. Object-Oriented Programming/lab4/AgentLib/: agency.cpp  agency.h  table.cpp  table.h
Term 3. Object-Oriented Programming/lab4/html/: agency_8cpp.html  agency_8h.html  agency_8h_source.html  annotated.html  app_8cpp.html  classagencies_1_1_agency-members.html  classagencies_1_1_agency.html  classagencies_1_1_printing-members.html  classagencies_1_1_printing.html  classagencies_1_1_radio-members.html  classes.html  (+39 more)
Term 3. Object-Orientied Programming/lab1/: Makefile  dialog.cpp  dialog.h  main.cpp  sparse.cpp  sparse.h
lab1/: Makefile  in.c  out.c  out.h  useful.c  useful.h  work.c  work.h
lab2/: Makefile  lab2v  list.h  main.c  queue.h  vector.c  vector.h
lab3/: Makefile  dtable.c  dtable.h  errorcodes.txt  ftable.c  ftable.h  item.c  item.h  ks1.c  ks1.h  ks2.c  ks2.h  lab3  main.c  table.c  table.h
lab4/: Makefile  Measures.xlsx  dtree.c  dtree.h  lab4  main.c  measures.txt  test.txt  timing.c  timing.h  tree.c  tree.h  useful.c  useful.h
lab4b/: dtree.c  dtree.h  graph.dot  lab4b  main.c  measures.txt  test.txt  test2.txt  timing.c  timing.h  tree.c  tree.h
lab5/: Makefile  dgraph.h  graph.c  graph.dot  ind.c  lab5  main.c  test.txt
(+53 files in other folders)
